// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display summary for 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     expenses totalling 
    $1.95
  </h3>
</div>
`;

exports[`should display summary for 2 expenses 1`] = `
<div>
  <h3>
    Viewing 
    2
     expenses totalling 
    $451.95
  </h3>
</div>
`;

exports[`should display summary for no expenses 1`] = `""`;
